--- a/src/components/Sections/Players/PlayersLIst/playersList.module.scss
+++ b/src/components/Sections/Players/PlayersLIst/playersList.module.scss
@@ -4,3 +4,11 @@
   margin: 24px 0;
   gap: 24px;
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px 0;
+  height: 264px;
+}
