--- a/src/components/Sections/Teams/TeamsTable/teamsTable.module.scss
+++ b/src/components/Sections/Teams/TeamsTable/teamsTable.module.scss
@@ -59,3 +59,11 @@
     }
   }
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px 0;
+  height: 686px;
+}
