--- a/src/components/Sections/Teams/TeamsTable/teamsTable.module.scss
+++ b/src/components/Sections/Teams/TeamsTable/teamsTable.module.scss
@@ -25,6 +25,7 @@
     color: #14141E;
     border-top: 1px solid #EEE;
     border-bottom: 1px solid #EEE;
+    white-space: nowrap;
 
     font-size: 16px;
     line-height: 1.5em;
