--- a/src/components/Sections/Teams/AddTeamForm/addTeamForm.module.scss
+++ b/src/components/Sections/Teams/AddTeamForm/addTeamForm.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/vars';
 
 .form {
-  margin: 12px 0 0;
+  margin: 12px 0 24px;
   padding: 24px 24px 41px;
   display: flex;
   flex-direction: column;
