--- a/src/components/common/Pagination/pagination.module.scss
+++ b/src/components/common/Pagination/pagination.module.scss
@@ -16,6 +16,11 @@
 .subContainerRight {
   display: flex;
   align-items: center;
+
+  div {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .select {
@@ -54,4 +59,28 @@
 
 .nextPage {
   margin-left: 25px;
+}
+
+@media (max-width: 769px) {
+  .container {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .subContainerLeft  {
+    gap: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .subContainerRight {
+    gap: 10px;
+    flex-direction: column;
+    align-items: flex-start;
+
+  }
+
+  .prevPage {
+    margin-left: 0;
+  }
 }
